--- a/corrs.html
+++ b/corrs.html
@@ -1,25 +1,65 @@
 <html>
 <head>
-  <title>Correspondences</title>
+  <title>jCoV</title>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <script src="dighl/main.js" type="text/javascript"></script>
 </head>
 <body>
-  <h3>jCoV: JavaScript Cognate Viewer for LingPy</h3>
-  <div id="meta"></div>
+  <nav class="navbar navbar-default" role="navigation">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">jCoV</a>
+      </div>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li><a href="#">ABOUT</a></li>
+          <!--<li><a href="#">HELP</a></li>-->
+          <li><a href="" onclick="event.preventDefault();JCOV.togglePanel('correspondences');" id="correspondences_toggle">CORRS <span class="glyphicon glyphicon-ok"></span></a></li>
+          <li><a href="" onclick="event.preventDefault();JCOV.togglePanel('cognates');" id="cognates_toggle">COGS <span class="glyphicon glyphicon-ok"></span></a></li>
+        </ul>
+        <div class="form-group navbar-form navbar-left">
+          <input type="text" onkeyup="JCOV.filterData(event,this);" id="filter_data" class="form-control" placeholder="Filter concepts">
+          <span id="language_selector" class="btn btn-default btn-sm" style="padding:8xp"></span>
+          <span id="sound_selector" class="btn btn-default btn-sm" style="padding:8xp"></span>
+          <span id="settings_selector" class="btn btn-default btn-sm" style="padding:8xp">
+            <select class="multiselect" id="selectorz" multiple>
+              <option id="hec" value="hide_empty_corrs" selected>Hide empty correspondences</option>
+              <option id="halm" value="reduce_alignments" selected>Hide empty columns in alignments</option>
+              <option id="ref" value="refresh">Constantly refresh the data</option>
+            </select>
+          </span>
+          <input type="number" value="2" title="Minimal number of sound correspondences" id="minoccs" class="form-control" style="width:60px" />
+          <button type="submit" onclick="JCOV.resetSelection();" class="btn btn-default" style="padding:8px"><span class="glyphicon glyphicon-refresh"></span></button>
+        </div>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="http://github.com/dighl/jcov/">GitHub</a></li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
+  <div id="main">
+  <!-- Group of sortable handes -->
   <div id="handles">
-    <div id="correspondences" class="sortables">
-      <div class="handle" id="correspondence_header" style="font-weight:bold;"></div>
-      <div id="correspondence_data"></div>
+    <!-- display of sound correspondences -->
+    <div id="correspondences" class="sortables bg-info">
+      <div class="header data" id="correspondence_header"></div>
+      <div id="correspondence_data" class="data">
+      </div>
     </div>
-    <div name="cognates" id="cognates" class="sortables">
-      <div id="cognates_header" class="handle"></div>
-      <div id="cognates_data"></div>
+    <!-- display of cognate sets -->
+    <div name="cognates" id="cognates" class="sortables bg-info">
+      <div id="cognates_header" class="header data"></div>
+      <div id="cognates_data" class="data"></div>
     </div>
-    <div id="selector">
-      <div id="selector_header" class="handle">Modify the Selection:</div>
-      <div id="selector_data"></div>
-    </div>
+  </div>
   </div>
 </body>
 </html>
