added preselection of 20 concepts

--- a/corrs.html
+++ b/corrs.html
@@ -27,6 +27,7 @@
         </ul>
         <div class="form-group navbar-form navbar-left">
           <input type="text" onkeyup="JCOV.filterData(event,this);" id="filter_data" class="form-control" placeholder="Filter concepts">
+          <span id="concept_selector" class="btn btn-default btn-sm" style="padding:8xp"></span>
           <span id="language_selector" class="btn btn-default btn-sm" style="padding:8xp"></span>
           <span id="sound_selector" class="btn btn-default btn-sm" style="padding:8xp"></span>
           <span id="settings_selector" class="btn btn-default btn-sm" style="padding:8xp">
