update testing fadeout

--- a/corrs.html
+++ b/corrs.html
@@ -5,6 +5,10 @@
   <script src="dighl/main.js" type="text/javascript"></script>
 </head>
 <body>
+  <div id="popup_background" class="popup_background">
+    <span class="popup_message"><span class="glyphicon glyphicon-repeat"></span></span>
+  </div>
+
   <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
@@ -46,6 +50,7 @@
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
+
   <div id="main">
   <!-- Group of sortable handes -->
   <div id="handles">
