--- a/corrs.html
+++ b/corrs.html
@@ -66,7 +66,7 @@
   </div>
   </div>
   <div id="popup_background" class="popup_background">
-    <span class="popup_message"><span class="glyphicon glyphicon-repeat"></span></span>
+    <!--<span class="popup_message"><span class="glyphicon glyphicon-repeat"></span></span>-->
   </div>
 </body>
 </html>
