--- a/jcov_remote.html
+++ b/jcov_remote.html
@@ -2,11 +2,28 @@
 <head>
   <title>jCoV</title>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <script src="dighl/main.js" type="text/javascript"></script>
+  <link rel="stylesheet" href="http://rawgit.com/dighl/jcov/master/dighl/style/jquery-ui.css" type="text/css"></link>
+  <link rel="stylesheet" href="http://rawgit.com/dighl/jcov/master/dighl/style/bootstrap.min.css" type="text/css"></link>
+  <link rel="stylesheet" href="http://rawgit.com/dighl/jcov/master/dighl/style/bootstrap-theme.css" type="text/css"></link>
+  <link rel="stylesheet" href="http://rawgit.com/dighl/jcov/master/dighl/style/dighl.css" type="text/css"></link>
+  <link rel="stylesheet" href="http://rawgit.com/dighl/jcov/master/dighl/style/correspondences.css" type="text/css"></link>
+  <link rel="stylesheet" href="http://rawgit.com/dighl/jcov/master/dighl/style/fixedheadertable.css" type="text/css"></link>
+
+  <script async src="http://rawgit.com/dighl/jcov/master/dighl/lib/vendor/jquery.js" type="text/javascript"></script>
+  <script async src="http://rawgit.com/dighl/jcov/master/dighl/lib/vendor/jquery-ui.js" type="text/javascript"></script>
+  <script async src="http://rawgit.com/dighl/jcov/master/dighl/lib/vendor/bootstrap.min.js" type="text/javascript"></script>
+  <script async src="http://rawgit.com/dighl/jcov/master/dighl/lib/vendor/bootstrap-multiselect.js" type="text/javascript"></script>
+  <script async src="http://rawgit.com/dighl/jcov/master/dighl/lib/vendor/jquery.fixedheadertable.min.js" type="text/javascript"></script>
+  <script async src="http://rawgit.com/dighl/jcov/master/dighl/lib/vendor/spin.js" type="text/javascript"></script>
+  <script async src="http://rawgit.com/dighl/jcov/master/dighl/lib/vendor/FileSaver.js" type="text/javascript"></script>
+  <script async src="http://rawgit.com/dighl/jcov/master/dighl/lib/utils.js" type="text/javascript"></script>
+  <script async src="http://rawgit.com/dighl/jcov/master/dighl/lib/highlight.js" type="text/javascript"></script>
+  <script async type="text/javascript">
+    {CORRS}
+  </script>
+  <script async src="http://rawgit.com/dighl/jcov/master/jcov.js" type="text/javascript"></script>
 </head>
 <body>
-
-
   <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
@@ -40,7 +57,7 @@
             </select>
           </span>
           <input type="number" value="2" title="Minimal number of sound correspondences" id="minoccs" class="form-control" style="width:60px" />
-          <button type="submit" onclick="JCOV.doIt(function(){JCOV.resetSelection();});" class="btn btn-default" style="padding:8px"><span class="glyphicon glyphicon-refresh"></span></button>
+          <button type="submit" onclick="JCOV.doIt(function(){{JCOV.resetSelection();}});" class="btn btn-default" style="padding:8px"><span class="glyphicon glyphicon-refresh"></span></button>
         </div>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="http://github.com/dighl/jcov/">GitHub</a></li>
